Format side hero

--- a/index.html
+++ b/index.html
@@ -8,6 +8,18 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-
+    <div class="container">
+        <div class="side-hero">
+            <div class="title">
+                <h1>ROCKET</h1>
+                <img src="/img/rocketship-outline.png" alt="Rocketship-logo" class="logo">
+            </div>
+        </div>
+        <div class="side-form">
+            <div class="header">Header</div>
+            <div>Form</div>
+            <div>Button</div>
+        </div>
+    </div>
 </body>
 </html>
