--- a/index.html
+++ b/index.html
@@ -16,9 +16,45 @@
             </div>
         </div>
         <div class="side-form">
-            <div class="header">Header</div>
-            <div>Form</div>
-            <div>Button</div>
+            <div class="header">
+                <p>This is not a real online service! Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</p>
+                <p>Lorem ipsum <em>dolor</em> sit amet.</p>
+            </div>
+            <div class="form">
+                <div class="input-section">
+                    <p>Let's do this!</p>
+                    <form action="" method="get" id="login-form">
+                        <div>
+                            <label for="first_name">FIRST NAME</label>
+                            <input type="text" id="first_name">
+                        </div>
+                        <div>
+                            <label for="last_name">LAST NAME</label>
+                            <input type="text" id="last_name">
+                        </div>
+                        <div>
+                            <label for="email">EMAIL</label>
+                            <input type="email" id="email">
+                        </div>
+                        <div>
+                            <label for="phone">PHONE</label>
+                            <input type="tel" id="phone">
+                        </div>
+                        <div>
+                            <label for="password">PASSWORD</label>
+                            <input type="password" id="password">
+                        </div>
+                        <div>
+                            <label for="password_confirm">CONFIRM PASSWORD</label>
+                            <input type="password" id="password_confirm">
+                        </div>
+                    </form>
+                </div>
+            </div>
+            <div class="form-submit">
+                <button type="submit" form="login-form">Create Account</button>
+                <p>Already have an account? <a href="">Log in</a></p>
+            </div>
         </div>
     </div>
 </body>
