--- a/index.html
+++ b/index.html
@@ -26,27 +26,27 @@
                     <form action="" method="get" id="login-form">
                         <div>
                             <label for="first_name">FIRST NAME</label>
-                            <input type="text" id="first_name">
+                            <input type="text" id="first_name" required>
                         </div>
                         <div>
                             <label for="last_name">LAST NAME</label>
-                            <input type="text" id="last_name">
+                            <input type="text" id="last_name" required>
                         </div>
                         <div>
                             <label for="email">EMAIL</label>
-                            <input type="email" id="email">
+                            <input type="email" id="email" required>
                         </div>
                         <div>
                             <label for="phone">PHONE</label>
-                            <input type="tel" id="phone">
+                            <input type="tel" id="phone" required pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" placeholder="000-000-0000">
                         </div>
                         <div>
                             <label for="password">PASSWORD</label>
-                            <input type="password" id="password">
+                            <input type="password" id="password" required pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}">
                         </div>
                         <div>
                             <label for="password_confirm">CONFIRM PASSWORD</label>
-                            <input type="password" id="password_confirm">
+                            <input type="password" id="password_confirm" required pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}">
                         </div>
                     </form>
                 </div>
