--- a/index.html
+++ b/index.html
@@ -38,15 +38,18 @@
                         </div>
                         <div>
                             <label for="phone">PHONE</label>
-                            <input type="tel" id="phone" required pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" placeholder="000-000-0000">
+                            <input type="tel" name="phone" id="phone" required pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" placeholder="000-000-0000">
+                            <span></span>
                         </div>
                         <div>
                             <label for="password">PASSWORD</label>
-                            <input type="password" id="password" required pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}">
+                            <input type="password" name="password" id="password" required pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}">
+                            <span></span>
                         </div>
                         <div>
-                            <label for="password_confirm">CONFIRM PASSWORD</label>
-                            <input type="password" id="password_confirm" required pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}">
+                            <label for="confirm">CONFIRM PASSWORD</label>
+                            <input type="password" name="confirm" id="confirm" required pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}">
+                            <span></span>
                         </div>
                     </form>
                 </div>
@@ -57,5 +60,6 @@
             </div>
         </div>
     </div>
+<script src="./js/index.js"></script>
 </body>
 </html>
