update document urls

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="side-hero">
             <div class="title">
                 <h1>ROCKET</h1>
-                <img src="/img/rocketship-outline.png" alt="Rocketship-logo" class="logo">
+                <img src="./img/rocketship-outline.png" alt="Rocketship-logo" class="logo">
             </div>
         </div>
         <div class="side-form">
