--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                         </div>
                         <div>
                             <label for="phone">PHONE</label>
-                            <input type="tel" name="phone" id="phone" required pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" placeholder="000-000-0000">
+                            <input type="tel" name="phone" id="phone" required pattern="[0-9]{9}">
                             <span></span>
                         </div>
                         <div>
